ci/tanzu/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: media-info-dev
  name: media-info-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      service: media-info-dev
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/default: "true"
        service: media-info-dev
        solera-vertical: rms
        solera-env: dev
        solera-org: mbe
        solera-ingress: enabled               
    spec:
      containers:
        - env:
            - name: NEW_RELIC_APP_NAME
              value: media-info-dev
            - name: NEW_RELIC_LABELS
              value: Environment:DEV;Vertical:RMS Solutions;Theme:Insurance PL Claims;Product:Estimating
            - name: NEW_RELIC_LICENSE_KEY
              value: e575f6ebb7f8821308cbea10b3817a8bcbe0NRAL
            - name: CORECLR_ENABLE_PROFILING
              value: "1"
            - name: CORECLR_NEWRELIC_HOME
              value: /deployables/newrelic-netcore20-agent
            - name: CORECLR_PROFILER_PATH
              value: /deployables/newrelic-netcore20-agent/libNewRelicProfiler.so
            - name: CORECLR_PROFILER
              value: "{36032161-FFC0-4B61-B559-F6C5D41BAE5A}"                            
            - name: RESILIENCE_POLICY_MAX_RETRY_COUNT
              value: "3"
            - name: RESILIENCE_POLICY_MAX_WAIT_TIME_MSECS
              value: "20000"
            - name: RESILIENCE_POLICY_MIN_WAIT_TIME_MSECS
              value: "1000"
            - name: S3_ACCESS_KEY
              value: "rms-dev-eagle-backend-admin"
            - name: S3_BUCKET
              value: "rms-development"
            - name: S3_SECRET_KEY
              value: "sy9E50QmVqU1chI7IER/2smarrinJtIBYWQhdEJa"        
          image: feeds.axadmin.net/docker/rms/mbe/media-info:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 60
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 10
          name: media-info-dev
          ports:
            - containerPort: 8080
          resources:
            limits:
              ephemeral-storage: "1000000000"
              memory: 500000Ki
      restartPolicy: Always
      serviceAccountName: default
status: {}
