ci/tanzu/dev/media-info-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: media-info-dev
  name: media-info-dev
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: media-info-dev
  type: ClusterIP
status:
  loadBalancer: {}
