ci/tanzu/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-info-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: media-info-dev.tkg-rms-dev.usdc01.solera.farm
    http:
      paths:
      - backend:
          service:
            name: media-info-dev
            port:
              number: 8080
        path: /
        pathType: Prefix
